[gd_scene load_steps=11 format=3 uid="uid://dxo660f05aaf7"]

[ext_resource type="Script" path="res://Scripts/UI/ClassOptions.gd" id="1_nvf8k"]
[ext_resource type="Script" path="res://Scripts/UI/SubclassOptions.gd" id="2_1t4xf"]
[ext_resource type="Script" path="res://Scripts/UI/RaceOptions.gd" id="2_2phtv"]
[ext_resource type="Script" path="res://Scripts/UI/RaceBookOptions.gd" id="3_2euwp"]
[ext_resource type="Script" path="res://Scripts/UI/SubraceOptions.gd" id="4_n3t7g"]
[ext_resource type="Script" path="res://Scripts/UI/BackgroundOptions.gd" id="5_6albi"]
[ext_resource type="Script" path="res://Scripts/UI/HitDice.gd" id="6_o1grw"]
[ext_resource type="Script" path="res://Scripts/UI/NextButton.gd" id="7_r1l2i"]
[ext_resource type="Script" path="res://Scripts/UI/BackToBasicsButton.gd" id="9_ywplu"]
[ext_resource type="Script" path="res://Scripts/UI/BackpackButton.gd" id="10_a8wwj"]

[node name="CharacterCreationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterBasicsScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CharacterBasicsScreen"]
layout_mode = 2

[node name="MainVBox" type="VBoxContainer" parent="CharacterBasicsScreen/MarginContainer"]
layout_mode = 2

[node name="NewCharacterLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "Create New Character"

[node name="StatHBox" type="HBoxContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="StatGrid" type="GridContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
columns = 6

[node name="Strength" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Strength"
horizontal_alignment = 1

[node name="Dexterity" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dexterity"
horizontal_alignment = 1

[node name="Constitution" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Constitution"
horizontal_alignment = 1

[node name="Intelligence" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intelligence"
horizontal_alignment = 1

[node name="Wisdom" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wisdom"
horizontal_alignment = 1

[node name="Charisma" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Charisma"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "8"

[node name="LineEdit2" type="LineEdit" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "8"

[node name="LineEdit3" type="LineEdit" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
placeholder_text = "8"

[node name="LineEdit4" type="LineEdit" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
placeholder_text = "8"

[node name="LineEdit5" type="LineEdit" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
placeholder_text = "8"

[node name="LineEdit6" type="LineEdit" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
placeholder_text = "8"

[node name="StatSelectionOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
item_count = 5
selected = 0
popup/item_0/text = "Manual"
popup/item_0/id = 4
popup/item_1/text = "Standard Array"
popup/item_1/id = 0
popup/item_2/text = "Point Buy"
popup/item_2/id = 1
popup/item_3/text = "Roll Dice"
popup/item_3/id = 2
popup/item_4/text = "Custom"
popup/item_4/id = 3

[node name="BasicInfoHBox" type="HBoxContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="BasicInfoGrid" type="GridContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.75
theme_override_constants/h_separation = 13
columns = 3

[node name="NameLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Name"
horizontal_alignment = 1

[node name="Name" type="LineEdit" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "New Character"
clear_button_enabled = true

[node name="Level" type="SpinBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.13
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="ClassLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Class"
horizontal_alignment = 1

[node name="ClassOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nvf8k")

[node name="SubclassOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_1t4xf")

[node name="RaceLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
tooltip_text = "Racist!"
mouse_filter = 1
text = "Race"
horizontal_alignment = 1

[node name="RaceOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_2phtv")

[node name="SubraceOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_n3t7g")

[node name="RaceBookOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.13
item_count = 1
selected = 0
popup/item_0/text = "All Books"
popup/item_0/id = 0
script = ExtResource("3_2euwp")

[node name="ClassFeaturesButton" type="Button" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Class Features
"

[node name="RaceFeaturesButton" type="Button" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Race Features"

[node name="HPHBox" type="HBoxContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="HitPointLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
text = "Hit Points: "

[node name="HitPoints" type="SpinBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="HitDiceLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
text = "Hit Dice: "

[node name="HitDice" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
text = "4d8"
script = ExtResource("6_o1grw")

[node name="OptionButton" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 0
popup/item_0/text = "Manual"
popup/item_0/id = 0
popup/item_1/text = "Average"
popup/item_1/id = 1
popup/item_2/text = "Maximum"
popup/item_2/id = 2
popup/item_3/text = "Roll"
popup/item_3/id = 3

[node name="CheckBox" type="CheckBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "First Level Max HP"

[node name="BackgroundVBox" type="HBoxContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="MulticlassButton" type="Button" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox"]
layout_mode = 2
text = "Multiclass"

[node name="BackgroundLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox"]
layout_mode = 2
text = "Background"

[node name="BackgroundOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox"]
layout_mode = 2
script = ExtResource("5_6albi")

[node name="AlignmentLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox"]
layout_mode = 2
text = "Alignment"

[node name="AlignmentOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox"]
layout_mode = 2
item_count = 9
selected = 0
popup/item_0/text = "Lawful Good"
popup/item_0/id = 0
popup/item_1/text = "Neutral Good"
popup/item_1/id = 2
popup/item_2/text = "Chaotic Good"
popup/item_2/id = 1
popup/item_3/text = "Lawful Neutral"
popup/item_3/id = 3
popup/item_4/text = "True Neutral"
popup/item_4/id = 4
popup/item_5/text = "Chaotic Neutral"
popup/item_5/id = 5
popup/item_6/text = "Lawful Evil"
popup/item_6/id = 6
popup/item_7/text = "Neutral Evil"
popup/item_7/id = 8
popup/item_8/text = "Chaotic Evil"
popup/item_8/id = 7

[node name="ButtonHBox" type="HBoxContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="BackButton" type="Button" parent="CharacterBasicsScreen/MarginContainer/MainVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Main Menu"

[node name="NextButton" type="Button" parent="CharacterBasicsScreen/MarginContainer/MainVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next to Features and Skills"
script = ExtResource("7_r1l2i")

[node name="CharacterFeaturesScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CharacterFeaturesScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterFeaturesScreen/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Features to Assign"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
item_count = 2
item_0/text = "Skills"
item_1/text = "Languages"

[node name="PanelContainer" type="PanelContainer" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="FeatureTitleLabel" type="Label" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Feature Name"
horizontal_alignment = 1

[node name="FeatureDescription" type="RichTextLabel" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "hello this is rich text why am I not displaying hold on one second"

[node name="ButtonHBox" type="HBoxContainer" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="BackToBasicsButton" type="Button" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Character Basics"
script = ExtResource("9_ywplu")

[node name="BackpackButton" type="Button" parent="CharacterFeaturesScreen/MarginContainer/VBoxContainer/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next to Backpack Setup"
script = ExtResource("10_a8wwj")

[node name="BackpackCreationScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="BackpackCreationScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackpackCreationScreen/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BackpackCreationScreen/MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="value_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/Level" to="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox/MulticlassButton" method="_on_level_value_changed"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/ClassOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox/HitDice" method="_on_class_options_item_selected"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/ClassOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/SubclassOptions" method="_on_class_options_item_selected"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/RaceOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/SubraceOptions" method="_on_race_options_item_selected"]
[connection signal="pressed" from="CharacterBasicsScreen/MarginContainer/MainVBox/ButtonHBox/NextButton" to="CharacterBasicsScreen/MarginContainer/MainVBox/ButtonHBox/NextButton" method="_on_pressed"]
[connection signal="pressed" from="CharacterFeaturesScreen/MarginContainer/VBoxContainer/ButtonHBox/BackToBasicsButton" to="CharacterFeaturesScreen/MarginContainer/VBoxContainer/ButtonHBox/BackToBasicsButton" method="_on_pressed"]
[connection signal="pressed" from="CharacterFeaturesScreen/MarginContainer/VBoxContainer/ButtonHBox/BackpackButton" to="CharacterFeaturesScreen/MarginContainer/VBoxContainer/ButtonHBox/BackpackButton" method="_on_pressed"]
